@@ -939,7 +939,7 @@ void LiveUI::UpdateCameraModeUI()
 
    if (positionTop && m_player->m_cameraMode)
    {
-      ImGui::Text(table->m_cameraLayoutMode == CLM_RELATIVE ? "Legacy Relative Camera Layout Mode" : "Absolute Camera Layout Mode");
+      ImGui::Text(table->m_cameraLayoutMode == CLM_RELATIVE ? "- Legacy Relative Camera Layout Mode -" : "- Absolute Camera Layout Mode -");
       ImGui::Text("Left/Right flipper key: decrease/increase highlighted value");
       ImGui::Text("Left/Right magna save key: previous/next option");
       if (LoadValueBoolWithDefault(regKey[RegName::Player], "EnableCameraModeFlyAround"s, false))
@@ -955,7 +955,8 @@ void LiveUI::UpdateCameraModeUI()
       }
       else
       {
-         ImGui::Text("Start Key: reset POV to old values");
+         ImGui::Text("Start Key: export POV file");
+         ImGui::Text("Credit Key: reset POV to old values");
       }
       ImGui::NewLine();
    }
@@ -1028,7 +1029,8 @@ void LiveUI::UpdateCameraModeUI()
       }
       else
       {
-         ImGui::Text("Start Key: reset POV to old values");
+         ImGui::Text("Start Key: export POV file");
+         ImGui::Text("Credit Key: reset POV to old values");
       }
    }
 
